# wasm-photo-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
docker/: nginx.conf
scripts/: docker-build.ps1  docker-run.ps1  open-static.ps1
shared-types/: package.json
shared-types/src/: index.ts
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
web/: package.json  playwright.config.ts  vite.config.ts
web/e2e/: app.spec.ts
web/src/: App.css  App.tsx  index.css
web/src/engine/: engine.worker.ts  engineProxy.ts  stateMapper.test.ts  stateMapper.ts
web/src/storage/: projectStorage.ts
web/src/types/: wasm-engine.d.ts
