[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }

[dev-dependencies]
proptest = "1.9.0"
